[Fixed] card content overflow

--- a/wwwroot/main.css
+++ b/wwwroot/main.css
@@ -206,11 +206,20 @@
       max-width: 96rem;
     }
   }
+  .m-3 {
+    margin: calc(var(--spacing) * 3);
+  }
   .mx-auto {
     margin-inline: auto;
   }
   .mb-8 {
     margin-bottom: calc(var(--spacing) * 8);
+  }
+  .line-clamp-11 {
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 11;
   }
   .\!hidden {
     display: none !important;
@@ -223,6 +232,9 @@
   }
   .flex {
     display: flex;
+  }
+  .grid {
+    display: grid;
   }
   .hidden {
     display: none;
@@ -245,14 +257,20 @@
   .table-cell {
     display: table-cell;
   }
+  .max-h-\[350px\] {
+    max-height: 350px;
+  }
   .min-h-10 {
     min-height: calc(var(--spacing) * 10);
   }
-  .min-h-15 {
-    min-height: calc(var(--spacing) * 15);
+  .min-h-28 {
+    min-height: calc(var(--spacing) * 28);
   }
   .min-h-170 {
     min-height: calc(var(--spacing) * 170);
+  }
+  .w-\[240px\] {
+    width: 240px;
   }
   .w-full {
     width: 100%;
@@ -263,6 +281,9 @@
   .resize {
     resize: both;
   }
+  .grid-cols-\[repeat\(auto-fill\,minmax\(240px\,1fr\)\)\] {
+    grid-template-columns: repeat(auto-fill,minmax(240px,1fr));
+  }
   .flex-col {
     flex-direction: column;
   }
@@ -272,22 +293,28 @@
   .flex-wrap {
     flex-wrap: wrap;
   }
+  .content-evenly {
+    align-content: space-evenly;
+  }
   .items-center {
     align-items: center;
   }
   .justify-center {
     justify-content: center;
   }
-  .gap-x-3 {
-    column-gap: calc(var(--spacing) * 3);
-  }
-  .gap-y-3 {
-    row-gap: calc(var(--spacing) * 3);
+  .gap-1 {
+    gap: calc(var(--spacing) * 1);
   }
   .truncate {
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
+  }
+  .overflow-hidden {
+    overflow: hidden;
+  }
+  .overflow-x-hidden {
+    overflow-x: hidden;
   }
   .rounded {
     border-radius: 0.25rem;
@@ -341,6 +368,12 @@
     --tw-font-weight: var(--font-weight-semibold);
     font-weight: var(--font-weight-semibold);
   }
+  .break-words {
+    overflow-wrap: break-word;
+  }
+  .text-ellipsis {
+    text-overflow: ellipsis;
+  }
   .text-gray-700 {
     color: var(--color-gray-700);
   }
@@ -374,6 +407,14 @@
   }
   .filter {
     filter: var(--tw-blur,) var(--tw-brightness,) var(--tw-contrast,) var(--tw-grayscale,) var(--tw-hue-rotate,) var(--tw-invert,) var(--tw-saturate,) var(--tw-sepia,) var(--tw-drop-shadow,);
+  }
+  .hover\:shadow-lg {
+    &:hover {
+      @media (hover: hover) {
+        --tw-shadow: 0 10px 15px -3px var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 4px 6px -4px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
+        box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
+      }
+    }
   }
   .sm\:w-1\/2 {
     @media (width >= 40rem) {
